Always use milliseconds in the Budget API implementation

BUG=729656

Review-Url: https://codereview.chromium.org/2922203002
Cr-Commit-Position: refs/heads/master@{#477147}

Former-commit-id: a16449269add06bf55fec1cbe3868b8fd4a806b4