chrome/browser/budget_service/budget_database_unittest.cc
@@ -133,7 +133,7 @@ TEST_F(BudgetDatabaseTest, AddEngagementBudgetTest) {
   ASSERT_DOUBLE_EQ(daily_budget * kDefaultExpirationInDays,
                    prediction_[0]->budget_at);
   ASSERT_EQ(0, prediction_[1]->budget_at);
-  ASSERT_EQ(expiration_time.ToDoubleT(), prediction_[1]->time);
+  ASSERT_EQ(expiration_time.ToJsTime(), prediction_[1]->time);
 
   // Advance time 1 day and add more engagement budget.
   clock->Advance(base::TimeDelta::FromDays(1));
@@ -145,9 +145,9 @@ TEST_F(BudgetDatabaseTest, AddEngagementBudgetTest) {
   ASSERT_DOUBLE_EQ(daily_budget * (kDefaultExpirationInDays + 1),
                    prediction_[0]->budget_at);
   ASSERT_DOUBLE_EQ(daily_budget, prediction_[1]->budget_at);
-  ASSERT_EQ(expiration_time.ToDoubleT(), prediction_[1]->time);
+  ASSERT_EQ(expiration_time.ToJsTime(), prediction_[1]->time);
   ASSERT_DOUBLE_EQ(0, prediction_[2]->budget_at);
-  ASSERT_EQ((expiration_time + base::TimeDelta::FromDays(1)).ToDoubleT(),
+  ASSERT_EQ((expiration_time + base::TimeDelta::FromDays(1)).ToJsTime(),
             prediction_[2]->time);
 
   // Advance time by 59 minutes and check that no engagement budget is added
